django allauth implemented

--- a/templates/home.html
+++ b/templates/home.html
@@ -9,14 +9,14 @@ Homepage
     <img src="{% static 'images/django.jpeg' %}" alt="">
     {% if user.is_authenticated %}
     <p class="lead">Hi, {{ user.username }}</p>
-    <a class="btn btn-primary" href="{% url 'logout' %}" role="button">Logout</a>
+    <a class="btn btn-primary" href="{% url 'account_logout' %}" role="button">Logout</a>
     {% else %}
     <p class="lead">You are not logged in..</p>
     <hr class="my-2">
 
-    <a class="btn btn-primary" href="{% url 'login' %}" role="button">Sign in</a>
+    <a class="btn btn-primary" href="{% url 'account_login' %}" role="button">Sign in</a>
 
-    <a class="btn btn-primary" href="{% url 'signup' %}" role="button">Sign up</a>
+    <a class="btn btn-primary" href="{% url 'account_signup' %}" role="button">Sign up</a>
     {% endif %}
 </div>
 {% endblock content %}
