--- a/templates/books/book_detail.html
+++ b/templates/books/book_detail.html
@@ -7,4 +7,13 @@
     <p>Author: {{ book.author }}</p>
     <p>Price: {{ book.price }}</p>
 </div>
+<div>
+    <h1>Reviews</h1>
+    <ul>
+        {% for review in book.reviews.all %}
+        <li>{{review.review}} {{review.author}}</li>
+        {% endfor %}
+    </ul>
+   
+</div>
 {% endblock content %}
