added media file

--- a/templates/books/book_detail.html
+++ b/templates/books/book_detail.html
@@ -3,12 +3,15 @@
 {% block title %}{{ book.title }}{% endblock title %}
 {% block content %}
 <div class="book-detail">
+    {% if book.cover %}
+    <img class="bookcover" src="{{book.cover.url}}" alt="">
+    {% endif %}
     <h2><a href="">{{ book.title }}</a></h2>
     <p>Author: {{ book.author }}</p>
     <p>Price: {{ book.price }}</p>
 </div>
 <div>
-    <h1>Reviews</h1>
+    <h3>Reviews</h3>
     <ul>
         {% for review in book.reviews.all %}
         <li>{{review.review}} {{review.author}}</li>
